# PQC-Simulations-for-XenevaOS

./: .gitignore  CMakeLists.txt  README.md  refactor.py  run_all.sh
analysis/: generate_docx.py  generate_plots.py  generate_report.py  generate_tables.py  run_pipeline.sh
experiments/ecdh_vs_mlkem/: benchmark.cpp  benchmark.h  main.cpp
experiments/package_verify/: benchmark.cpp  benchmark.h  main.cpp
experiments/rsa_vs_mldsa/: benchmark.cpp  benchmark.h  main.cpp
experiments/secure_boot/: benchmark.cpp  benchmark.h  main.cpp
experiments/secure_ipc/: benchmark.cpp  benchmark.h  main.cpp
include/: benchmark_common.h
results/: FINAL_REPORT.md  PQC_Benchmarks_Report.docx  XenevaOS_PQC_Paper.tex  XenevaOS_PQC_Proposal.tex  ecdh_vs_mlkem_results.csv  ecdh_vs_mlkem_results.json  package_verify_results.csv  package_verify_results.json  rsa_vs_mldsa_results.csv  rsa_vs_mldsa_results.json  secure_boot_results.csv  secure_boot_results.json  secure_ipc_results.csv  secure_ipc_results.json
results/tables/: table_exp1.tex  table_exp2.tex  table_exp3.tex  table_exp4.tex  table_exp5.tex
